--- a/content/courses/testing-foundations/manual-vs-automated-testing.mdx
+++ b/content/courses/testing-foundations/manual-vs-automated-testing.mdx
@@ -1,10 +1,15 @@
----
-title: Manual vs Automated Testing
----
 # Manual vs Automated Testing
 
-## SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+## Manual Testing
 
-## Another SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+Manual testing involves someone, typically QA, physically interacting with an application. Manual testing is often very time-consuming as it requires someone repeating the same tasks over and over again, something that computers are incredibly good at.
+
+Modern software development teams are shipping code into production multiple times a day, which is next to impossible if you are only manually testing. With the advance of Continuous Integration (CI) and Continuous Deployment (CD) modern software development teams are automating as much as possible, including testing, allowing them to push to production multiple times a day confidently.
+
+## Automated Testing
+
+As more and more teams adopt CI/CD systems and want to push to production multiple times a day, automated tests are the only way to scale such demand.
+
+There is currently a movement within software development known as "[shift left](https://smartbear.com/learn/automated-testing/shifting-left-in-testing/)." Shift left essentially means that the developers are increasingly becoming more involved with testing. Historically, testing was performed by a QA team at the very end of the development process. Now the industry is "shifting left" by having the responsibility of testing fall more and more upon the shoulders of developers. So instead of testing being an afterthought, it is now integrated into the entire software development lifecycle from the very beginning.
+
+Test automation is quickly becoming the "norm" for most software engineering teams, and its popularity and usefulness will only increase over time. If you do not have a lot of automated testing experience, you have come to the right place. We created Real World Testing with Cypress to teach you how to write automated tests, whether you are already a developer or a QA professional.
