--- a/content/courses/testing-foundations/who-should-be-responsible-for-testing.mdx
+++ b/content/courses/testing-foundations/who-should-be-responsible-for-testing.mdx
@@ -1,10 +1,19 @@
----
-title: Who should be responsible for testing?
----
 # Who should be responsible for testing?
 
-## SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+Ultimately, testing is everyone's responsibility.
 
-## Another SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+In the real world, there are basically three team structures within modern software companies.
+
+1. Dedicated development and QA teams.
+
+Companies with dedicated development and QA teams typically leave the software development up to the developers and testing to the QA team.
+
+2. Designer, Developer, QA, etc.
+
+Some companies will have small teams comprised of a developer, designer, QA engineer, etc., all working together on a single project or feature. In this scenario, the developer is responsible for the code, and QA is responsible for testing.
+
+3. Fullstack Solo Developer
+
+Some companies, like early-stage startups, do not have dedicated QA teams and put all of the testing responsibility on the developers. The developers are responsible for writing the code and ensuring that it works as expected.
+
+While most companies and teams have dedicated QA engineers, everyone is responsible for ensuring that an application is working as intended.
