--- a/content/courses/cypress-fundamentals/cypress-ui-overview.mdx
+++ b/content/courses/cypress-fundamentals/cypress-ui-overview.mdx
@@ -1,10 +1,105 @@
----
-title: Cypress UI Overview
----
 # Cypress UI Overview
 
-## SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+This is what Cypres looks like when you launch it for the first time.
 
-## Another SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.10.45_AM.png)
+
+At the top is a navigation bar that includes tabs for Tests, Runs, Settings, and Browser Selection.
+
+The Tests tab is where all of your Cypress tests live and allows you to select which tests you would like Cypress to run.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.16.59_AM.png)
+
+The Runs tab is where you can connect Cypress to the [Cypress Dashboard](https://www.cypress.io/dashboard/) to see your recorded test results.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.15.59_AM.png)
+
+The Settings tab contains all the configuration settings for Cypress.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.16.02_AM.png)
+
+Finally, the browser selection drop-down lets you tell Cypress which browser you would like to launch and run your tests.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.16.07_AM.png)
+
+## Tests Tab
+
+When you first install Cypress, it will automatically create some sample integration tests for you. These tests are an excellent way to learn some of the basics and some more advanced concepts. We highly recommend you look through them.
+
+You can easily collapse or expand your directories and tests by clicking on the "Collapse All" or "Expand All" buttons.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.20.10_AM_copy.png)
+
+You can also tell Cypress to execute all of your tests by clicking the "Run 20 integration tests."
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.20.10_AM.png)
+
+## Test Runner UI
+
+Clicking on one of your test files will launch the [Cypress Test Runner UI](https://docs.cypress.io/guides/core-concepts/test-runner#Overview).
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.29.33_AM.png)
+
+On the left-hand side, you will see the [Cypress Command Log](https://docs.cypress.io/guides/core-concepts/test-runner#Command-Log). This is where information about each test will be displayed. In the example above, all of our tests are passing, denoted by a green checkmark.
+
+You can click on any of your tests to see detailed information about that specific test.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.37.49_AM.png)
+
+This becomes incredibly useful when you have failing tests as the assertion error will be displayed along with the exact line of code that failed.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.38.56_AM.png)
+
+On the right-hand side is your application.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.41.06_AM.png)
+
+Remember, since Cypress runs in the browser, you also have access to your browser's dev tools.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.41.46_AM.png)
+
+## Test Runner Toolbar
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.42.57_AM.png)
+
+At the top of the Test Runner UI is a toolbar with several handy features.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.42.57_AM%201.png)
+
+The first item is a button that will show the main Cypress window with all of your test files. This is a handy way to launch subsequent files and tests.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.42.57_AM%202.png)
+
+Next, the toolbar displays how many of your tests have passed, failed, and are pending.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.42.57_AM%203.png)
+
+The toolbar also displays the total duration it took for all of your tests to run.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.42.57_AM%204.png)
+
+Cypress will automatically scroll down as your tests are being executed to keep the most current action in view. You can disable this auto-scrolling feature by clicking this button.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.42.57_AM%205.png)
+
+You can relaunch all of your tests with this button.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_9.42.57_AM%206.png)
+
+The Cypress Test Runner also includes something called the [Selector Playground](https://docs.cypress.io/guides/core-concepts/test-runner#Selector-Playground). When clicked, it will open up a new toolbar under your application window.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_10.02.52_AM.png)
+
+This behaves similarly to the element selector in your browser's dev tools. By highlighting an element in your application, Cypress will populate the `cy.get()` method and populate it with the correct selector to `.get()` that element.
+
+Once you have selected the element you want, click the copy to clipboard button to paste it into your test file.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_10.05.32_AM.png)
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_10.07.16_AM.png)
+
+You can also see the current URL of your application in the address bar.
+
+![](/images/cypress-fundamentals/cypress-ui-overview/Screen_Shot_2021-08-31_at_10.07.16_AM_copy.png)
+
+Finally, you can see the current browser window dimensions.
