--- a/content/courses/cypress-fundamentals/how-to-debug-failing-tests.mdx
+++ b/content/courses/cypress-fundamentals/how-to-debug-failing-tests.mdx
@@ -1,10 +1,43 @@
----
-title: How to Debug Failing Tests
----
 # How to Debug Failing Tests
 
-## SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+Knowing how to debug failing tests is arguably one of the most important and useful skills for you to learn. In this lesson we will discuss various tips, methods and techniques to help you debug and fix your failing tests.
 
-## Another SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+## Cypress UI
+
+The Cypress UI is one of the fastest ways to figure out what went wrong with your tests.
+
+![](/images/cypress-fundamentals/how-to-debug-failing-tests/Screen_Shot_2021-08-31_at_2.42.05_PM.png)
+
+It can also be incredibly useful to see all of the steps your tests took before the error was triggered. When you click on a step, Cypress will output useful information to the browser's console.
+
+For example, in the failing test above, when clicking upon the assertion step, Cypress logs out the actual array in the console, which after inspection shows that there is only a single element within it.
+
+![](/images/cypress-fundamentals/how-to-debug-failing-tests/Screen_Shot_2021-08-31_at_2.43.25_PM.png)
+
+## Screenshots & Videos
+
+When you are running Cypress in headless mode by using the `cypress run` command, screenshots and videos will automatically be recorded anytime there is a failure. This is incredibly useful, especially when running your tests in CI, as it provides you with not only a screenshot at the exact point of failure, but also a video of your failing test.
+
+You can tell Cypress to take a screenshot manually by using the `cy.screenshot()` command. You can find more info about this command [here](https://docs.cypress.io/api/commands/screenshot).
+
+## Logging
+
+There are two useful ways to log information from your tests. One way is to use `cy.log()` the other is to use `console.log()` . Remember [Cypress is just JavaScript](Cypress%20is%20Just%20JavaScript%20bc735379ff5146d7918c6927e735b5d8.md) so you can leverage all of the helpful debugging techniques you use in JS too.
+
+`[cy.log()](https://docs.cypress.io/api/commands/log)` will print a message to the Cypress Command Log
+
+![](/images/cypress-fundamentals/how-to-debug-failing-tests/Screen_Shot_2021-08-31_at_2.55.00_PM.png)
+
+You can also use `console.log()` which will log to the browser's console.
+
+```jsx
+console.log("my custom message")
+```
+
+![](/images/cypress-fundamentals/how-to-debug-failing-tests/Screen_Shot_2021-08-31_at_2.55.53_PM.png)
+
+## Browser Dev Tools
+
+Since Cypress runs in the browser, you have full access to all of the information from your browser's developer tools. This means you can use the same techniques and functionality you are used to using when debugging issues with your application code to debug your failing Cypress tests too.
+
+![](/images/cypress-fundamentals/how-to-debug-failing-tests/browser-dev-tools.gif)
